--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,15 @@ uuid = "fdc3cc23-1282-4485-8f12-43aae555edf1"
 authors = ["kreikrei <kreitonstrs@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
+SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
+
 [compat]
 julia = "1"
 
