--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 
