--- a/Project.toml
+++ b/Project.toml
@@ -8,8 +8,10 @@ AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
