--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 
 [compat]
+AxisArrays = "0.4"
 julia = "1"
 
 [extras]
