--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
+SCIP = "82193955-e24f-5292-bf16-6f2c5261a85f"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 
 [compat]
